# python-project-job

./: .aiexclude  AGENTS.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  sbom.json
.github/workflows/: ci.yml
src/my_job/: __init__.py  main.py
src/my_job/adapter/: __init__.py  database_witer.py  source_data_reader.py
src/my_job/config/: __init__.py  project_logger.py  project_properties.py
src/my_job/exception/: __init__.py
src/my_job/model/: __init__.py  data_model.py
src/my_job/resources/: project_properties.json
src/my_job/service/: __init__.py  data_transformer.py
test/integration/: test_main_integration.py
test/resources/: source_data.csv
test/unit/adapter/: test_database_writer.py  test_source_data_reader.py
test/unit/service/: test_calculator.py  test_data_transformer.py
